--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,5 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.3.21", features = ["derive"] }
 notify-rust = "4.8.0"
-nvml-wrapper = "0.7.0"
+nvml-wrapper = { version = "0.9.0", features = ["legacy-functions"] }
 sysinfo = "0.29.8"
