--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.26"
 clap = { version = "4.3.21", features = ["derive"] }
 notify-rust = "4.8.0"
 nvml-wrapper = { version = "0.9.0", features = ["legacy-functions"] }
